Created utility class to handle command line options