@@ -35,6 +35,7 @@
 		<org.apache.httpcomponents.httpclient>4.5.2</org.apache.httpcomponents.httpclient>
 		<io.springfox.version>2.6.0</io.springfox.version>
 		<cobertura-maven-plugin.version>2.7</cobertura-maven-plugin.version>
+		<apache-commons-cli>1.3.1</apache-commons-cli>
 	</properties>
 	
 	<dependencies>
@@ -104,6 +105,10 @@
 					<groupId>org.aspectj</groupId>
 					<artifactId>aspectjrt</artifactId>
 				</exclusion>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>jcl-over-slf4j</artifactId>
+				</exclusion>
 			</exclusions>
 		</dependency>
 
@@ -164,6 +169,13 @@
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
 			<version>${org.apache.httpcomponents.httpclient}</version>
+		</dependency>
+		
+		<!-- Apache Commons CLI -->
+		<dependency>
+		    <groupId>commons-cli</groupId>
+		    <artifactId>commons-cli</artifactId>
+		    <version>${apache-commons-cli}</version>
 		</dependency>
 
 		<!-- Swagger -->
@@ -239,6 +251,8 @@
 					<includes>
 						<include>**/*Suite.java</include>
 					</includes>
+					<!-- -Xverify:none may reduce startup time. No need to verify bitecode on the test phase -->
+					<argLine>-Xverify:none</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
